--- a/tasks/rense_data.ipynb
+++ b/tasks/rense_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +159,53 @@
     "\n",
     "# Skriv til filen uten feil\n",
     "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gjør at datoene blir i datetime-format så ikke det er noen skrivefeil i datoene henta:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
+      "0 2023-01-01              1.1           1005.7          0.0   \n",
+      "1 2023-01-02             -2.7           1010.8          0.6   \n",
+      "2 2023-01-03             -5.8           1019.6          0.0   \n",
+      "3 2023-01-04             -7.9           1008.7          0.9   \n",
+      "4 2023-01-05             -3.9           1015.3         19.8   \n",
+      "\n",
+      "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
+      "0                     69               3.0  \n",
+      "1                     83               7.0  \n",
+      "2                     85               1.0  \n",
+      "3                     87               8.0  \n",
+      "4                     81               8.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gjør at 'Dato' er i datetime-format\n",
+    "R_Sammenslaaing_uten_feil['Dato'] = pd.to_datetime(R_Sammenslaaing_uten_feil['Dato'])\n",
+    "\n",
+    "# Start fra første dato og generer resten\n",
+    "start_dato = R_Sammenslaaing_uten_feil.loc[0, 'Dato']\n",
+    "riktige_datoer = [start_dato + pd.Timedelta(days=i) for i in range(len(R_Sammenslaaing_uten_feil))]\n",
+    "\n",
+    "# Sett inn de riktige datoene\n",
+    "R_Sammenslaaing_uten_feil['Dato'] = riktige_datoer\n",
+    "\n",
+    "\n",
+    "print(R_Sammenslaaing_uten_feil.head())"
    ]
   }
  ],
