--- a/tasks/kode_som_henter_API.ipynb
+++ b/tasks/kode_som_henter_API.ipynb
@@ -385,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
