--- a/tasks/rense_data.ipynb
+++ b/tasks/rense_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -42,17 +42,160 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-02</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>1010.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>2023-02-24</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>998.2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>1029.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2023-05-17</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>2023-06-03</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>1020.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2023-06-21</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>1011.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>7.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>987.6</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>2023-12-15</td>\n",
+       "      <td>-5.3</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>2024-01-24</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>988.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>2024-02-22</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>986.8</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>2024-03-25</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>2024-04-09</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1007.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>623</th>\n",
+       "      <td>2024-08-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1010.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Dato, Temperatur (°C), Lufttrykk (hPa), Nedbør (mm), Relativ fuktighet (%), Skydekke (oktas)]\n",
-       "Index: []"
+       "           Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
+       "1    2023-01-02             -2.7           1010.8          NaN   \n",
+       "57   2023-02-24              0.6            998.2          6.0   \n",
+       "103  2023-04-09              7.5           1029.1          0.0   \n",
+       "142  2023-05-17             11.1              NaN          5.6   \n",
+       "159  2023-06-03             12.9           1020.1          0.0   \n",
+       "177  2023-06-21             18.6           1011.2          NaN   \n",
+       "315  2023-11-03              NaN            987.6         21.7   \n",
+       "359  2023-12-15             -5.3           1019.0          NaN   \n",
+       "399  2024-01-24              3.5            988.4          NaN   \n",
+       "431  2024-02-22              1.7            986.8          6.0   \n",
+       "463  2024-03-25              3.4              NaN          1.3   \n",
+       "478  2024-04-09              8.5           1007.4          0.0   \n",
+       "623  2024-08-26              NaN           1010.2          1.0   \n",
+       "\n",
+       "     Relativ fuktighet (%)  Skydekke (oktas)  \n",
+       "1                     83.0               7.0  \n",
+       "57                     NaN               5.7  \n",
+       "103                   51.0               NaN  \n",
+       "142                   39.0               3.3  \n",
+       "159                    NaN               6.3  \n",
+       "177                   87.0               7.3  \n",
+       "315                   92.0               8.0  \n",
+       "359                   93.0               7.7  \n",
+       "399                   96.0               7.7  \n",
+       "431                  100.0               NaN  \n",
+       "463                   83.0               8.0  \n",
+       "478                    NaN               7.7  \n",
+       "623                   78.0               6.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,12 +212,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kode for å rette opp i eventuelle negative nedbør og/eller lufttrykk-verdier:"
+    "Kode for å rette opp i eventuelle negative nedbør, lufttrykk, skydekke og/eller fuktighet-verdier:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +227,12 @@
     "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)\n",
     "\n",
     "R_Sammenslaaing_uten_feil['Lufttrykk (hPa)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Lufttrykk (hPa)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)\n",
+    "\n",
+    "R_Sammenslaaing_uten_feil['Skydekke (oktas)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Skydekke (oktas)']]\n",
+    "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)\n",
+    "\n",
+    "R_Sammenslaaing_uten_feil['Relativ fuktighet (%)'] = [abs(x) for x in R_Sammenslaaing_uten_feil['Relativ fuktighet (%)']]\n",
     "R_Sammenslaaing_uten_feil.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\" , index=False)"
    ]
   },
@@ -96,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,36 +277,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kode for å teste om lufttrykk-verdien er tom:"
+    "Kode for å teste om noen av verdiene i 'R_sammenslaaing_gjsnitt.csv' er tomme:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Les inn CSV-filen\n",
+    "# Les inn filen med potensielle feil\n",
     "df = pd.read_csv(\"../data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "\n",
-    "# Gå gjennom temperaturkolonnen med indekser\n",
-    "for i in range(1, len(df) - 1):  \n",
-    "    trykk = df.loc[i, \"Lufttrykk (hPa)\"]\n",
+    "# Kolonner vi vil rense\n",
+    "kolonner = [\n",
+    "    \"Temperatur (°C)\",\n",
+    "    \"Lufttrykk (hPa)\",\n",
+    "    \"Nedbør (mm)\",\n",
+    "    \"Relativ fuktighet (%)\",\n",
+    "    \"Skydekke (oktas)\"\n",
+    "]\n",
     "\n",
-    "    # Hvis verdien er mistenkelig eller tom\n",
-    "    if pd.isna(trykk):\n",
+    "# Gå gjennom radene (uten første og siste)\n",
+    "for i in range(1, len(df) - 1):\n",
+    "    for kol in kolonner:\n",
+    "        if pd.isna(df.loc[i, kol]):\n",
+    "            verdi_forrige = df.loc[i - 1, kol]\n",
+    "            verdi_etter = df.loc[i + 1, kol]\n",
     "\n",
-    "        # Gjennomsnitt av dagen før og dagen etter\n",
-    "        trykk_forrige = df.loc[i - 1, \"Lufttrykk (hPa)\"]\n",
-    "        trykk_etter = df.loc[i + 1, \"Lufttrykk (hPa)\"]\n",
-    "        gjennomsnitt = (trykk_forrige + trykk_etter) / 2\n",
+    "            # Bare erstatt dersom begge naboene ikke er NaN\n",
+    "            if not pd.isna(verdi_forrige) and not pd.isna(verdi_etter):\n",
+    "                df.loc[i, kol] = (verdi_forrige + verdi_etter) / 2\n",
     "\n",
-    "        # Erstatt verdien\n",
-    "        df.loc[i, \"Lufttrykk (hPa)\"] = gjennomsnitt\n",
-    "\n",
-    "# Skriv til filen uten feil\n",
+    "# Lagre den rensede filen\n",
     "df.to_csv(\"../data/R_Sammenslaaing_uten_feil.csv\", index=False)"
    ]
   },
@@ -170,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -178,18 +332,18 @@
      "output_type": "stream",
      "text": [
       "        Dato  Temperatur (°C)  Lufttrykk (hPa)  Nedbør (mm)  \\\n",
-      "0 2023-01-01              1.1           1005.7          0.0   \n",
+      "0 2023-01-01              1.1              NaN          0.0   \n",
       "1 2023-01-02             -2.7           1010.8          0.6   \n",
       "2 2023-01-03             -5.8           1019.6          0.0   \n",
       "3 2023-01-04             -7.9           1008.7          0.9   \n",
       "4 2023-01-05             -3.9           1015.3         19.8   \n",
       "\n",
       "   Relativ fuktighet (%)  Skydekke (oktas)  \n",
-      "0                     69               3.0  \n",
-      "1                     83               7.0  \n",
-      "2                     85               1.0  \n",
-      "3                     87               8.0  \n",
-      "4                     81               8.0  \n"
+      "0                   69.0               3.0  \n",
+      "1                   83.0               7.0  \n",
+      "2                   85.0               1.0  \n",
+      "3                   87.0               8.0  \n",
+      "4                   81.0               8.0  \n"
      ]
     }
    ],
@@ -211,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
