--- a/tasks/skydekke_luftfuktighet.ipynb
+++ b/tasks/skydekke_luftfuktighet.ipynb
@@ -494,6 +494,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Oppgave 4: \\\\\n",
+    "\n",
+    "Kan du gi et eksempel på hvordan du vil implementere en enkel statistisk analyse for å undersøke sammenhengen mellom to variabler i datasettet?\n",
+    "- gjennomsnitt / standardavvik \n",
+    "\n",
+    "Hvordan planlegger du å håndtere eventuelle skjevheter i dataene under analysen, og hvilke metoder vil du bruke for å sikre at analysen er pålitelig?\n",
+    " - uteligger\n",
+    "\n",
+    "\n",
+    " Oppgave 5\n",
+    " Hvordan vil du håndtere og visualisere manglende data i grafene dine for å sikre at de fortsatt er informative?\n",
+    "  - Skal ikke vi ha fikset på dette allerede? \n",
+    "  sameligne ufiksa data med fiksa data, eks gjennomsnittlig trykk med feil verdier vs gjenomsnittlig trykk uten feil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
