La inn refleksjon for oppgave 6

--- a/tasks/Oppg6.ipynb
+++ b/tasks/Oppg6.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "id": "0ec854a2",
    "metadata": {},
    "outputs": [
@@ -643,17 +643,6 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import joblib\n",
-    "\n",
-    "# 2. Last inn og klargjør data\n",
-    "df_vær = pd.read_csv(\"../data/R_Sammenslaaing_uten_feil.csv\")\n",
-    "df_luft = pd.read_csv(\"../data/R_luftkvalitet.csv\")\n",
-    "\n",
-    "df_vær[\"Dato\"] = pd.to_datetime(df_vær[\"Dato\"])\n",
-    "df_luft[\"date\"] = pd.to_datetime(df_luft[\"date\"])\n",
-    "df_luft.set_index(\"date\", inplace=True)\n",
-    "\n",
-    "# Slå sammen datasettene (reset_index sikrer samme struktur)\n",
-    "df_samlet = pd.concat([df_vær.reset_index(drop=True), df_luft.reset_index(drop=True)], axis=1)\n",
     "\n",
     "# 3. Velg funksjoner og målvariabel\n",
     "X = df_samlet[[\"Temperatur (°C)\", \"Lufttrykk (hPa)\", \"Relativ fuktighet (%)\"]]\n",
@@ -754,6 +743,16 @@
     "# Bruk verdiene fra observasjonen over\n",
     "fuktighet = ny_observasjon[\"Relativ fuktighet (%)\"].values[0]\n",
     "print(bør_ta_med_paraply(pred_skydekke, fuktighet))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a513ad33",
+   "metadata": {},
+   "source": [
+    "# Evaluering av visualiseringene\n",
+    "Heatmapet gjorde det lettere å se på hva som kan bruker til regresjonsmodellen og hvilke verdiener som var interesant å se korrelasjonen mellom. VIdere Viste linjediagramm hvordan verdiene utviklet seg over tid. I sammenheng med værdata er de da interessant å se forskjell i årstidene og viser blant annet lavere skydekke begge årene på sommeren. Linjediagram visualiserte også godt hvordan manglede verdier blir håndtert av linær regresjon.\n",
+    "Sæylediagrammene ga en tydelig fremmvisning av ukentlig trender og viste tydelig om det var feil i datasettet.\n"
    ]
   }
  ],
