La inn kommentarer

--- a/tasks/opg4_plott.ipynb
+++ b/tasks/opg4_plott.ipynb
@@ -1,8 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c4edd5a1",
+   "metadata": {},
+   "source": [
+    "# Dataanalyse\n",
+    "\n",
+    "I denne analysen tar vi i bruk klassen 'MiljoPerMnd' som lager grupper for gjennomsnitt, median og standardavvik per måned:\n",
+    "gjennomsnitt_per_mnd, median_per_mnd og standardavvik_per_mnd\n",
+    "Disse statistiske målene er viktige for å oppdage avvik datasettet vårt. Det gir oss også en god oversikt, samt innsikt variasjon og trender. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f58e8c0",
+   "metadata": {},
+   "source": [
+    "# Gjennomsnittsverdier\n",
+    "For gjennomsnittet:\n",
+    "Vi har tatt i bruk den innebygde funksjonen pandas.mean.\n",
+    "Vi observerer representative verider, som gir oss en indikasjon på  troverdige miljøverdier i datasettet vårt."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "73e79d1f",
    "metadata": {},
    "outputs": [
@@ -326,8 +349,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "672b250f",
+   "metadata": {},
+   "source": [
+    "# Medianverdi\n",
+    "Ved bruk av pandas gjennom den innebygde funksjonen numpy.median, har vi her display for gjennomsnittlig medianverdier per måned."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "ebe0180c",
    "metadata": {},
    "outputs": [
@@ -641,8 +673,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79620d42",
+   "metadata": {},
+   "source": [
+    "# Standardavvik\n",
+    "Standardavvik er et mål på hvor mye verdiene i et datasett varierer i forhold til gjennomsnittet.\n",
+    "For å beregne standardavvik tar vi i bruk Pandas.std(ddof=1). Dette kommer av at vi har datamålinger over tid og derfor tar . Dermed undervurderer vi ikke variasjonen.\n",
+    "n-1 gjør at vi regner utvalgsstandardavvik\n",
+    "Vi observerer et høyt standardavvik for nedbør særlig i august 2023. Dtete tyder på et ustabilt klima i denne perioden. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ea2e0dc6",
    "metadata": {},
    "outputs": [
