--- a/tasks/oppg5.ipynb
+++ b/tasks/oppg5.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En graf som sammenligner temperatur og lufttrykk over tid:"
+    "# Visualisering av Temperatur og Lufttrykk over Tid\n",
+    "\n",
+    "Dette skriptet har som mål å visualisere utviklingen av temperatur og lufttrykk over tid ved hjelp av data lagret i en CSV-fil. Vi bruker bibliotekene **Pandas** for databehandling, **Matplotlib** og **Seaborn** for visualisering.\n",
+    "\n",
+    "### Hovedtrinn i koden:\n",
+    "\n",
+    "1. Leser inn en CSV-fil med værdata (temperatur og lufttrykk).\n",
+    "2. Konverterer dato-kolonnen til et datetime-format som gjør det mulig å sortere og visualisere tid som en kontinuerlig akse.\n",
+    "3. Lager en todelt graf (dual axis) som viser både temperatur og lufttrykk over tid.\n",
+    "4. Temperatur plottes på venstre y-akse (rød), mens lufttrykk plottes på høyre y-akse (blå).\n",
+    "5. Grafen styles med Seaborn og Matplotlib for å gi et profesjonelt uttrykk og god lesbarhet.\n",
+    "\n",
+    "Dette gir oss mulighet til å se samvariasjon og mønstre i værdataene over tid.\n"
    ]
   },
   {
@@ -24,39 +36,46 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "#Imporerter nødvendige biblioteker\n",
     "\n",
-    "# Velger hvilken stil i Seaborn som skal brukes\n",
+    "import pandas as pd #Bruker Pandas for å lese og manipulere data i tabellform\n",
+    "import matplotlib.pyplot as plt #Bruker Matplotlib for å lage figurer og grafer\n",
+    "import seaborn as sns #Bruker Seaborn for å lage enklere og penere visualiseringer\n",
+    "\n",
+    "# Velger hvilken stil som skal brukes i Seaborn, velger her grafer som gir rutenett og hvit bakgrunn\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
-    "# Leer inn CSV-filen som skal brukes til å hente data fra\n",
+    "# Leser inn CSV-filen som skal brukes til å hente data fra, til en Pandas DataFrame\n",
     "fil = \"../data/R_Sammenslaaing_gjsnitt.csv\"\n",
     "df = pd.read_csv(fil)\n",
     "\n",
-    "# Konverterer 'Dato' til datetime-format\n",
+    "# Konverterer 'Dato' til datetime-format, dette gjør det mulig å bruke datoene som en kontinuerlig tidsakse i grafer\n",
     "df['Dato'] = pd.to_datetime(df['Dato'])\n",
     "\n",
-    "# Plotter temperatur og lufttrykk over tid\n",
+    "# Oppretter et figur- og akseobjekt for å lage plottet\n",
+    "# Setter størrelsen på figuren til 12 tommer bred og 6 tommer høy\n",
     "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
     "\n",
-    "# Plotter temperatur på venstre akse\n",
+    "# Plotter temperatur på venstre akse, bruker en rød farge for å representere temperatur\n",
     "sns.lineplot(data=df, x='Dato', y='Temperatur (°C)', ax=ax1, label=\"Temperatur (°C)\", color='tab:red')\n",
+    "# Setter en tittel for y-aksen og farge\n",
     "ax1.set_ylabel(\"Temperatur (°C)\", color='tab:red')\n",
     "ax1.tick_params(axis='y', labelcolor='tab:red')\n",
     "\n",
-    "# Lager en ny akse for lufttrykk\n",
+    "# Lager en sekundær y-akse på høyre side for å plotte lufttrykk\n",
     "ax2 = ax1.twinx()\n",
+    "# Plotter lufttrykksdata med blå farge\n",
     "sns.lineplot(data=df, x='Dato', y='Lufttrykk (hPa)', ax=ax2, label=\"Lufttrykk (hPa)\", color='tab:blue')\n",
     "ax2.set_ylabel(\"Lufttrykk (hPa)\", color='tab:blue')\n",
     "ax2.tick_params(axis='y', labelcolor='tab:blue')\n",
     "\n",
-    "# Formatér plottet\n",
+    "# Setter tittel på grafen, og sørger for at datoetikettene på x-aksen roteres for bedre lesbarhet\n",
     "plt.title(\"Temperatur og Lufttrykk over tid\")\n",
     "fig.autofmt_xdate()\n",
+    "# Justerer layout slik at alt får plass og det ikke overlapper\n",
     "fig.tight_layout()\n",
     "\n",
+    "#Viser grafen \n",
     "plt.show()\n"
    ]
   },
@@ -64,7 +83,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sammenligner nedbør og skydekke over tid:"
+    "# Visualisering av Nedbør og Skydekke\n",
+    "\n",
+    "Denne visualiseringen viser hvordan **nedbør (mm)** og **skydekke (oktas)** utvikler seg over tid. Vi bruker to ulike graf-typer for å fremheve de forskjellige egenskapene ved datavariablene:\n",
+    "\n",
+    "- **Nedbør** visualiseres som et stolpediagram (barplot), siden dette representerer en akkumulerende mengde per dag.\n",
+    "- **Skydekke** vises som en linje, da det er mer naturlig å observere utviklingen som en kontinuerlig variabel.\n",
+    "\n",
+    "### Hovedtrinn i visualiseringen:\n",
+    "\n",
+    "1. Lager et kombinert plott med to y-akser:\n",
+    "   - Venstre y-akse for nedbør.\n",
+    "   - Høyre y-akse for skydekke.\n",
+    "2. Bruker ulike farger for å skille de to dataseriene visuelt.\n",
+    "3. Formatterer datoaksen og optimaliserer layout for lesbarhet.\n",
+    "\n",
+    "Dette plottet gir en god visuell sammenheng mellom nedbørsmengde og skydekke, som kan brukes til å identifisere værmønstre og sammenhenger.\n"
    ]
   },
   {
@@ -85,24 +119,28 @@
     }
    ],
    "source": [
-    "# Plotter nedbør og skydekke\n",
+    "# Oppretter en figur og hovedakse\n",
     "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
     "\n",
-    "# Viser nedbør som stolpediagram\n",
+    "# Plotter nedbør som et stolpediagram på venstre akse, bruker lyseblå farge\n",
     "sns.barplot(data=df, x='Dato', y='Nedbør (mm)', ax=ax1, color='skyblue', label=\"Nedbør (mm)\")\n",
     "ax1.set_ylabel(\"Nedbør (mm)\", color='skyblue')\n",
     "ax1.tick_params(axis='y', labelcolor='skyblue')\n",
     "\n",
-    "# Lager ny akse for skydekke\n",
+    "# Oppretter en sekundær y-akse på høyre side for å plotte skydekke\n",
     "ax2 = ax1.twinx()\n",
+    "# Plotter skydekke som linjediagram med grå farge, oktas som måleenhet\n",
     "sns.lineplot(data=df, x='Dato', y='Skydekke (oktas)', ax=ax2, color='gray', label=\"Skydekke\", linewidth=2)\n",
     "ax2.set_ylabel(\"Skydekke (oktas)\", color='gray')\n",
     "ax2.tick_params(axis='y', labelcolor='gray')\n",
     "\n",
-    "# Tittel og layout\n",
+    "# Setter tittel på figuren, samt roterer datoetikketer for bedre lesbarhet\n",
     "plt.title(\"Nedbør og Skydekke over tid\")\n",
     "fig.autofmt_xdate()\n",
+    "# Sørger for at alle elementer får plass og ikke overlapper\n",
     "fig.tight_layout()\n",
+    "\n",
+    "# Viser grafen\n",
     "plt.show()\n"
    ]
   },
@@ -110,7 +148,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scatterplot med regresjon: Temperatur vs Relativ fuktighet"
+    "# Sammenheng mellom Temperatur og Relativ Fuktighet\n",
+    "\n",
+    "Denne visualiseringen utforsker forholdet mellom **temperatur (°C)** og **relativ fuktighet (%)**. Vi bruker et **scatterplot med regresjonslinje** for å undersøke om det finnes en lineær sammenheng mellom de to variablene.\n",
+    "\n",
+    "### Hvorfor denne typen plott?\n",
+    "- **Punktene** representerer individuelle målinger.\n",
+    "- **Regresjonslinjen** (rød) indikerer trenden i datasettet – altså hvordan fuktigheten typisk endres med temperaturen.\n",
+    "- Dette kan være nyttig for å forstå fysiske eller værrelaterte sammenhenger, som at varmere luft ofte holder på mer fuktighet.\n",
+    "\n",
+    "### Hva vi kan tolke:\n",
+    "- En negativ skråning antyder at høyere temperaturer gir lavere relativ fuktighet.\n",
+    "- En positiv skråning betyr at fuktigheten øker med temperaturen.\n"
    ]
   },
   {
@@ -119,15 +168,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lager et scatterplot med regresjonslinje\n",
-    "\n",
+    "# Lager en ny figur , 8x6 tommer\n",
     "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# Lager et scatterplot med tilhørende regresjonslinje for å vise sammenhengen mellom temperatur og relativ fuktighet\n",
     "sns.regplot(data=df, x='Temperatur (°C)', y='Relativ fuktighet (%)', scatter_kws={'alpha':0.6}, line_kws={'color':'red'})\n",
+    "\n",
+    "# Setter tittel og aksetekster for å forklare hva plottet viser\n",
     "plt.title(\"Sammenheng mellom temperatur og relativ fuktighet\")\n",
     "plt.xlabel(\"Temperatur (°C)\")\n",
     "plt.ylabel(\"Relativ fuktighet (%)\")\n",
+    "\n",
+    "# Legger til rutenett for å gjøre det lettere å lese av verdier\n",
     "plt.grid(True)\n",
+    "\n",
+    "# Justerer layout slik at elementene ikke overlapper\n",
     "plt.tight_layout()\n",
+    "\n",
+    "# Viser grafen \n",
     "plt.show()\n"
    ]
   },
@@ -135,7 +193,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bruker Plotly til å lage en interaktiv linjegraf for temperatur og lufttrykk over tid"
+    "# Interaktiv visualisering av Temperatur og Lufttrykk med Plotly\n",
+    "\n",
+    "Denne koden bruker **Plotly** til å lage en interaktiv visualisering som viser **temperatur** og **lufttrykk** over tid. I motsetning til statiske grafer, gir Plotly:\n",
+    "\n",
+    "- Zoom- og pan-muligheter\n",
+    "- Hover-informasjon for alle datapunkter\n",
+    "- Støtte for flere y-akser (f.eks. temperatur og lufttrykk)\n",
+    "\n",
+    "### Grafens innhold:\n",
+    "\n",
+    "- Temperatur plottes som en rød linje med markører og vises på venstre y-akse.\n",
+    "- Lufttrykk plottes som en blå linje med markører og vises på høyre y-akse.\n",
+    "- Datoene vises på x-aksen, og hover-verktøyet viser begge verdiene for hver dag.\n",
+    "\n",
+    "Denne typen graf egner seg godt til utforskning og presentasjon av værdata hvor man ønsker tydelig innsikt i samvariasjon mellom to ulike enheter.\n"
    ]
   },
   {
@@ -159,14 +231,14 @@
     "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
     "\n",
-    "# Les CSV og konverter dato\n",
+    "# Leser inn CSV-filen og konverterer 'Dato' kolonnen til datetime-format\n",
     "df = pd.read_csv(\"..data/R_Sammenslaaing_gjsnitt.csv\")\n",
     "df['Dato'] = pd.to_datetime(df['Dato'])\n",
     "\n",
-    "# Lag figur\n",
+    "# Lager en tom figur\n",
     "fig = go.Figure()\n",
     "\n",
-    "# Temperatur\n",
+    "# Legger til temperatur som en rød linje med markører\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=df['Dato'], y=df['Temperatur (°C)'],\n",
     "    mode='lines+markers',\n",
@@ -174,16 +246,16 @@
     "    line=dict(color='red')\n",
     "))\n",
     "\n",
-    "# Lufttrykk\n",
+    "# Legger til lufttrykk som en blå linje med markører \n",
     "fig.add_trace(go.Scatter(\n",
     "    x=df['Dato'], y=df['Lufttrykk (hPa)'],\n",
     "    mode='lines+markers',\n",
     "    name='Lufttrykk (hPa)',\n",
     "    line=dict(color='blue'),\n",
-    "    yaxis=\"y2\"\n",
+    "    yaxis=\"y2\" #Forteller plotly at denne skal bruke høyre y-akse\n",
     "))\n",
     "\n",
-    "# Legg til sekundær y-akse\n",
+    "# Oppretter layout med tittel, akser og hover-funksjonalitet\n",
     "fig.update_layout(\n",
     "    title=\"Interaktiv graf: Temperatur og Lufttrykk over tid\",\n",
     "    xaxis=dict(title=\"Dato\"),\n",
@@ -195,8 +267,8 @@
     "        overlaying=\"y\",\n",
     "        side=\"right\"\n",
     "    ),\n",
-    "    legend=dict(x=0.01, y=0.99),\n",
-    "    hovermode=\"x unified\"\n",
+    "    legend=dict(x=0.01, y=0.99), # Plassering av forklaring\n",
+    "    hovermode=\"x unified\" # Hovermode gjør at tooltip viser begge verdier samtidig ved samme x-verdi\n",
     ")\n",
     "\n",
     "fig.show()\n"
@@ -206,7 +278,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interaktiv scatterplot med farge etter relativ fuktighet"
+    "# Interaktiv scatterplot med flere variabler\n",
+    "\n",
+    "Denne interaktive scatterploten (punktdiagram) viser sammenhengen mellom **temperatur (°C)** og **lufttrykk (hPa)**. \n",
+    "\n",
+    "### Visualiseringsdimensjoner:\n",
+    "- **X-akse**: Temperatur (°C)\n",
+    "- **Y-akse**: Lufttrykk (hPa)\n",
+    "- **Farge**: Relativ fuktighet (%) – gir innsikt i fuktighetsnivået ved ulike kombinasjoner av temperatur og trykk.\n",
+    "- **Størrelse (bobler)**: Nedbør (mm) – større bobler indikerer mer nedbør.\n",
+    "- **Hover-data**: Dato – så du kan se når hvert punkt ble målt.\n",
+    "\n",
+    "### Hvorfor denne visualiseringen er nyttig:\n",
+    "Denne grafen kombinerer **fire dimensjoner i ett plott**, og gjør det enkelt å finne mønstre som:\n",
+    "- Er det høyere lufttrykk når det er lav eller høy temperatur?\n",
+    "- Forekommer mer nedbør ved spesifikke trykk- og temperaturverdier?\n",
+    "- Hvordan relaterer fuktighet seg til trykk og temperatur?\n",
+    "\n",
+    "Interaktivitet gjør det lettere å utforske datamønstre og finne spesifikke hendelser.\n"
    ]
   },
   {
@@ -215,9 +304,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importerer Plotly Express for rask og interaktiv visualisering\n",
     "import plotly.express as px\n",
     "\n",
-    "# Interaktiv scatterplot\n",
+    "# Lager et interaktiv scatterplot med flere variabler \n",
     "fig = px.scatter(\n",
     "    df,\n",
     "    x='Temperatur (°C)',\n",
@@ -229,12 +319,14 @@
     "    title='Temperatur vs Lufttrykk – farget etter relativ fuktighet'\n",
     ")\n",
     "\n",
+    "# Oppdaterer layout, aksetitler og fargeforklaring\n",
     "fig.update_layout(\n",
     "    xaxis_title='Temperatur (°C)',\n",
     "    yaxis_title='Lufttrykk (hPa)',\n",
     "    coloraxis_colorbar=dict(title='Relativ fuktighet (%)')\n",
     ")\n",
     "\n",
+    "# Viser grafen \n",
     "fig.show()\n"
    ]
   },
@@ -242,9 +334,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dropdown-meny for å velge variabel over tid\n",
+    "# Interaktiv linjegraf med variabelvalg via dropdown-meny\n",
     "\n",
-    "Dette lar deg velge f.eks. “Temperatur”, “Lufttrykk”, “Nedbør” eller “Skydekke” fra en meny og vise den som linjediagram:"
+    "Denne koden lager en **interaktiv tidsserie-visualisering** med `Plotly`, hvor brukeren kan velge én av fem værvariabler å vise over tid:\n",
+    "\n",
+    "- Temperatur (°C)\n",
+    "- Lufttrykk (hPa)\n",
+    "- Nedbør (mm)\n",
+    "- Relativ fuktighet (%)\n",
+    "- Skydekke (oktas)\n",
+    "\n",
+    "### Hvordan det fungerer:\n",
+    "- Alle fem variabler plottes som linjer, men bare én vises om gangen.\n",
+    "- Brukeren kan bruke en **dropdown-meny** til å bytte hvilken variabel som vises.\n",
+    "- Hover-verktøyet viser eksakt verdi for valgt variabel ved hver dato.\n",
+    "\n",
+    "Dette gjør grafen oversiktlig, fleksibel og velegnet til å analysere flere tidsserier i én samlet visning – uten å overlese grafen med mange linjer samtidig.\n"
    ]
   },
   {
@@ -253,10 +358,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lag linjer for alle variablene vi vil kunne velge mellom\n",
+    "# Liste over værvariabler vi ønsker å visualisere interaktivt\n",
     "variabler = ['Temperatur (°C)', 'Lufttrykk (hPa)', 'Nedbør (mm)', 'Relativ fuktighet (%)', 'Skydekke (oktas)']\n",
     "\n",
-    "# Lag grunnstruktur\n",
+    "# Lager grunnstruktur, en tom Plotly figur\n",
     "fig = go.Figure()\n",
     "\n",
     "# Legg til én linje per variabel, alle usynlige bortsett fra den første\n",
@@ -268,7 +373,7 @@
     "        visible=(i == 0)\n",
     "    ))\n",
     "\n",
-    "# Lag dropdown-knappene\n",
+    "# Lager dropdown-knappet for hver variabel\n",
     "buttons = [\n",
     "    dict(label=var,\n",
     "         method='update',\n",
@@ -288,11 +393,12 @@
     "        yanchor=\"top\"\n",
     "    )],\n",
     "    title=f\"{variabler[0]} over tid\",\n",
-    "    xaxis_title=\"Dato\",\n",
-    "    yaxis_title=\"Verdi\",\n",
+    "    xaxis_title=\"Dato\", # x-akse: tid\n",
+    "    yaxis_title=\"Verdi\", # y-akse: generell fordi variablene er ulike\n",
     "    hovermode=\"x unified\"\n",
     ")\n",
     "\n",
+    "# Viser grafen\n",
     "fig.show()\n"
    ]
   },
@@ -300,7 +406,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lager en correlation heatmap som viser hvordan variablene henger sammen:"
+    "# Korrelasjonsheatmap for vær- og miljødata\n",
+    "\n",
+    "Denne visualiseringen viser **sammenhengen (korrelasjon)** mellom ulike numeriske værvariabler, som temperatur, lufttrykk, nedbør, relativ fuktighet og skydekke.\n",
+    "\n",
+    "### Hva betyr korrelasjon?\n",
+    "- En verdi nær **+1** betyr at to variabler **øker sammen** (positiv sammenheng).\n",
+    "- En verdi nær **-1** betyr at når én variabel øker, **minker den andre** (negativ sammenheng).\n",
+    "- En verdi nær **0** betyr **ingen klar sammenheng**.\n",
+    "\n",
+    "### Hvorfor heatmap?\n",
+    "Et korrelasjonsheatmap gjør det lett å:\n",
+    "- Identifisere hvilke variabler som henger tett sammen.\n",
+    "- Avdekke redundans eller potensielt interessante mønstre.\n",
+    "- Forstå hvordan værforhold henger sammen over tid.\n",
+    "\n",
+    "Verdiene vises direkte i rutenettet for presis analyse.\n"
    ]
   },
   {
@@ -312,16 +433,22 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Plukk ut bare tallkolonnene\n",
+    "# Velger kun kolonner med numeriske verdier fra DataFrame, nødvendig fordi korrelasjon bare kan beregnes på tall\n",
     "numeriske_kolonner = df.select_dtypes(include='number')\n",
     "\n",
-    "# Lag korrelasjonsmatrisen\n",
+    "# Beregner korrelasjonsmatrise mellom alle numeriske variabler, verdiene går fra -1 til 1, der 1 er perfekt korrelasjon\n",
     "korrelasjon = numeriske_kolonner.corr()\n",
     "\n",
-    "# Plot heatmap\n",
+    "# Setter størrelse for figuren\n",
     "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "# Lager et heatmap med Seaborn basert på korrelasjonsmatrisen\n",
     "sns.heatmap(korrelasjon, annot=True, cmap=\"coolwarm\", fmt=\".2f\", linewidths=0.5)\n",
+    "\n",
+    "# Legger til tittel\n",
     "plt.title(\"Korrelasjonsheatmap for miljødata\")\n",
+    "\n",
+    "# Sørger for at alt får plass og ikke overlapper \n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
