rettet opp i klasse på opg 5. Samt skrevet mer

--- a/tasks/opg4_plott.ipynb
+++ b/tasks/opg4_plott.ipynb
@@ -17,10 +17,40 @@
    "id": "0f58e8c0",
    "metadata": {},
    "source": [
-    "# Gjennomsnittsverdier\n",
+    "### Gjennomsnittsverdier\n",
     "For gjennomsnittet:\n",
     "Vi har tatt i bruk den innebygde funksjonen pandas.mean.\n",
-    "Vi observerer representative verider, som gir oss en indikasjon på  troverdige miljøverdier i datasettet vårt."
+    "Vi observerer representative verider, som gir oss en indikasjon på  troverdige miljøverdier i datasettet vårt.\n",
+    "\n",
+    "## Gjennomsnittsverdier per måned\n",
+    "\n",
+    "Ved å bruke metoden gjennomsnitt_per_mnd() i klassen MiljoPerMnd, beregnes gjennomsnittet for ulike værvariabler måned for måned, gruppert etter år.\n",
+    "\n",
+    "### Hva denne analysen viser:\n",
+    "\n",
+    "- Den gir en oversikt over hvordan gjennomsnittlig vær har utviklet seg gjennom måneder og år.\n",
+    "- Dette er nyttig for å finne sesongmønstre, for eksempel om juli har blitt varmere over tid, eller hvilke måneder som i snitt har mest nedbør.\n",
+    "\n",
+    "### Hva regnes ut:\n",
+    "Følgende værvariabler inngår i beregningen:\n",
+    "\n",
+    "- Temperatur (°C)\n",
+    "- Lufttrykk (hPa)\n",
+    "- Nedbør (mm)\n",
+    "- Relativ fuktighet (%)\n",
+    "- Skydekke (oktas)\n",
+    "\n",
+    "Verdiene grupperes på kombinasjonen År og Måned.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Hvorfor bruke gjennomsnitt?\n",
+    "\n",
+    "- Det gir et generelt bilde av værforholdene.\n",
+    "- Egner seg godt til å sammenligne år og måneder over tid.\n",
+    "- Brukes ofte som grunnlag i klimaanalyser og vurdering av endringer.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -353,7 +383,7 @@
    "id": "672b250f",
    "metadata": {},
    "source": [
-    "# Medianverdi\n",
+    "### Medianverdi\n",
     "Ved bruk av pandas gjennom den innebygde funksjonen numpy.median, har vi her display for gjennomsnittlig medianverdier per måned."
    ]
   },
@@ -677,7 +707,7 @@
    "id": "79620d42",
    "metadata": {},
    "source": [
-    "# Standardavvik\n",
+    "### Standardavvik\n",
     "Standardavvik er et mål på hvor mye verdiene i et datasett varierer i forhold til gjennomsnittet.\n",
     "For å beregne standardavvik tar vi i bruk Pandas.std(ddof=1). Dette kommer av at vi har datamålinger over tid og derfor tar . Dermed undervurderer vi ikke variasjonen.\n",
     "n-1 gjør at vi regner utvalgsstandardavvik\n",
