--- a/notebook_mappe2/Opg6.ipynb
+++ b/notebook_mappe2/Opg6.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "c3b32c00",
    "metadata": {},
    "outputs": [],
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "2a468b07",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df_klima, df_luft = les_og_forbered_data(\"../data/R_Sammenslaaing_uten_feil.csv\", \"../data/R_luftkvalitet.csv\")\n",
-    "df = slå_sammen_data(df_klima, df_luft)\n",
-    "df = fjern_outliers(df, \"no2\", 300)"
+    "df_klima, df_luft = Databehandling.les_og_forbered_data(\"../data/R_Sammenslaaing_uten_feil.csv\", \"../data/R_luftkvalitet.csv\")\n",
+    "df = Databehandling.slå_sammen_data(df_klima, df_luft)\n",
+    "df = Databehandling.fjern_outliers(df, \"no2\", 300)"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "d027656f",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "b5094b7b",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "c5e7a074",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "fa958aa1",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "c2f091eb",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "714dc69a",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1c70e29c",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a2fe2791",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
